# -Abdul-s-fork-BilliardsEverything

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  Vary4Docs.md  VaryDocs.md  build.gradle  format.fish  full_project_context.txt  garbage.txt  icon.icns  iterToLimit.txt  meson.build  middleVary3.txt  package-mac.sh  package-windows.bat  testcoord.txt
Backupfile/: bounding_inequalities copy.txt
app/: updater.bat  updater.sh
app/backend/shared/: libbackend.dylib  libboost_system.dylib  libboost_thread.dylib  libgmp.10.dylib  libmpfi.0.dylib  libmpfr.6.dylib  libtbb.12.dylib
bench/backend/: bench.cpp
cover/: cover.txt  info.txt  polygon.txt  stables.txt  triples.txt  unused.txt
debug/backend/: debug.cpp
docs/: CODEBASE-HANDBOOK.md  nextIter.txt
docs/assets/handbook/: README.md  architecture.mmd  autopolyvary-ordering.mmd  research-workflow.mmd
docs/codex-project-study/: bug-register.csv
docs/handbook/: HANDBOOK-WORK-STATE.md  coverage.csv  handbook-print.css  handbook-render.lua
docs/release/: ABDUL-WINDOWS-RELEASE-REPORT.md  BUILD-RUN-GUIDE.md  CALCULATE-ADD-TO-COVER-FIX-2026-07-20.md  CONCURRENCY-MRR-FIXES-2026-07-15.md  README.md  SIGNIFICANT-APPLICATION-CHANGES.md
examples/backend/: factor_longer.cpp  factor_more_precise.cpp  factor_shorter.cpp  too_small_precision.cpp
profile/backend/: profile.cpp
src/backend/cpp/: basic.cpp  bounding_inequalities.cpp  bounding_region.cpp  classified_code_sequence.cpp  code_sequence.cpp  common.cpp  conversion.cpp  database.cpp  diff.cpp  division.cpp  equations.cpp  evaluator.cpp  general.cpp  gradient.cpp  invalid_code_sequence.cpp  linear_derivative.cpp  merge.cpp  parse.cpp  refine.cpp  reorder.cpp  search.cpp  shooting_vectors.cpp  triangle_billiard.cpp  triangle_billiard4.cpp  trig_identities.cpp  trim.cpp  unfolding.cpp  utils.cpp  vary3.cpp  vary4.cpp  vary_cs.cpp  verify.cpp  wrapper.cpp
src/backend/cpp/cover/: load.cpp  save.cpp
src/backend/cpp/database/: admin.cpp  deserialize.cpp  serialize.cpp  viewer.cpp
src/backend/cpp/math/: side_sum.cpp  symbols.cpp
src/backend/headers/: bad_angles.hpp  basic.hpp  bezier.hpp  bezier_interp.hpp  bounding_inequalities.hpp  bounding_region.hpp  classified_code_sequence.hpp  code_sequence.hpp  code_type.hpp  common.hpp  conversion.hpp  database.hpp  diff.hpp  division.hpp  equations.hpp  evalf.hpp  evaluator.hpp  factor.hpp  falgo.hpp  general.hpp  gradient.hpp  intersection.hpp  invalid_code_sequence.hpp  linear_derivative.hpp  merge.hpp  newton.hpp  numbers.hpp  refine.hpp  reorder.hpp  search.hpp  shooting_vectors.hpp  sqlite.hpp  triangle_billiard.hpp  triangle_billiard4.hpp  trig_identities.hpp  trim.hpp  unfolding.hpp  utils.hpp  vary3.hpp  vary4.hpp  (+4 more)
src/backend/headers/cover/: cover.hpp  load.hpp  save.hpp
src/backend/headers/database/: admin.hpp  deserialize.hpp  serialize.hpp  viewer.hpp
src/cover/cpp/: cover.cpp  db.cpp  load.cpp
src/java/patternfinder/: OneCodeWindow.java  PatUtils.java  PatternFinder.java  SearchWindow.java  Single.java  Spattern.java  SuperCheckTask.java  ThreeState.java  Tpattern.java  Triple.java
src/test/cpp/: main.cpp
src/test/headers/: bounding_region_test.hpp  code_sequence_test.hpp  diff_test.hpp  equations_test.hpp  gradient_test.hpp  parse_test.hpp  trig_identities_test.hpp
src/test/resources/: empty_codes_to_15.txt  nonempty_codes_to_15.txt
tmp/: PolyAutoVaryBounds.txt  cover_polygon.txt  cover_stables.txt  cover_triples.txt  holes_obo.txt
tools/benchmark/: README.md  run-benchmarks.ps1  workloads.json
tools/docs/: Doxyfile.handbook  audit-handbook.ps1  build-handbook.ps1
(+114 files in other folders)
